--- a/main.ipynb
+++ b/main.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Rice classification using PyTorch\n",
     "\n",
-    "Welcome to my notebook, where i'm going to use the PyTorch library to train a model that can classify samples of rice based on some features.\n",
+    "Welcome to this notebook, where I use the PyTorch library to train a model capable of classifying rice samples based on numerical features.\n",
     "\n",
-    "The dataset used for this project can be found [here](https://www.kaggle.com/datasets/mssmartypants/rice-type-classification/data), on Kaggle.\n",
+    "The dataset used in this project is available on [here](https://www.kaggle.com/datasets/mssmartypants/rice-type-classification/data).\n",
     "\n",
-    "The main purpose is not to be a complete data science project, with exploratory data analysis, test of diferents classification algorithms and deep analysis of the result. Instead, the main purpose is to use PyTorch with it's features to code a complete neural network that can produce a solution at the end and to observe how some validation metrics (such as accuracy and loss, specialy) vary along the training process of the neural network.\n",
+    "The objective is not to build a complete data science pipeline with extensive EDA, model comparison, and deep statistical analysis. Instead, the focus is to implement a neural network using PyTorch and observe how validation metrics (especially loss and accuracy) evolve during training.\n",
     "\n",
-    "For any doubt, commentary or question, fell free to get in touch with me via [linkedin](https://www.linkedin.com/in/marcosdatadev/).\n",
+    "For questions or suggestions, feel free to contact me via [linkedin](https://www.linkedin.com/in/marcosdatadev/).\n",
     "\n",
     "Hope you have a good day and a pleasant night!"
    ]
@@ -23,9 +23,9 @@
    "id": "b9d7e56f",
    "metadata": {},
    "source": [
-    "The imports here are just for the libraries and functions that i'm going to use. Nothing fancy, but with all the necessary tools.\n",
+    "The imports include all required libraries and utilities.\n",
     "\n",
-    "The 'device' at the end is to define which execution device are going to be used along the project. If the machine in use has a GPU to be used in the training phase (which makes it faster and stabler), so the GPU will be used. Otherwise, the CPU will be selected."
+    "The device variable defines the execution hardware used throughout the project. If a CUDA-enabled GPU is available, it will be used to accelerate training. Otherwise, computation will run on the CPU."
    ]
   },
   {
@@ -211,9 +211,9 @@
    "id": "ddc44ba6",
    "metadata": {},
    "source": [
-    "As a said earlier, this project don't try to be optimized, so i've chosed to not give a profound look to outlier, duplicates, null values and other problems that usually occur in real life datasets.\n",
+    "As mentioned earlier, this project does not aim to be fully optimized. Therefore, I did not perform extensive checks for outliers, duplicates, missing values, or other common real-world data issues.\n",
     "\n",
-    "This decision was made with their problems in mind. The main reason was the kaggle documentation that shows that this dataset is already cleansed, with no greater problems."
+    "This decision is based on the Kaggle documentation, which indicates that the dataset is already cleaned and does not contain significant inconsistencies."
    ]
   },
   {
@@ -269,9 +269,9 @@
    "id": "bccef3f7",
    "metadata": {},
    "source": [
-    "The normalization is necessary, once the parameters have a great discrepancy in range (the eccentricity, for example, goes from 0.68 to 0.97, while the convexArea goes from 2579 to 11k).\n",
+    "Normalization is necessary because the features have significantly different numerical ranges (for example, eccentricity ranges from 0.68 to 0.97, while convex area ranges from approximately 2,500 to 11,000).\n",
     "\n",
-    "Without this, the model will naturally prioritize certain features over others. With this, all features have the same weight and importance at the beggining."
+    "Without normalization, the model may implicitly assign greater importance to features with larger magnitudes. Scaling ensures that all features start with comparable influence during training."
    ]
   },
   {
@@ -567,7 +567,7 @@
    "source": [
     "Here we have a sample of what is in the DataLoader:\n",
     "\n",
-    "Each X is composed of 10 numbers, between 0 and 1 (since we normalized all the values). This numbers represents each feature of the rice sample. The Y vector is the label vector, and shows to wich class each sample belongs. In this case, we can see that the first 4 samples was labeled in class 1 and the last 4 in the class 0. There's 8 samples in each batch for this size was defined back then. We could set this value any number we wanted, but 8 is a good number for now."
+    "Each X is composed of 10 numbers, between 0 and 1 (since we normalized all the values). These numbers represents each feature of the rice sample. The Y vector is the label vector, and shows to which class each sample belongs. In this case, we can see that the first 4 samples were labeled in class 1 and the last 4 in the class 0. There's 8 samples in each batch for this size was defined back then. We could set this value any number we wanted, but 8 is a good number for now."
    ]
   },
   {
@@ -614,11 +614,11 @@
    "id": "bb7c7f68",
    "metadata": {},
    "source": [
-    "Here is where the magic happens! The model is created in this class MyModel, which inherits the class nn.Module. Here we set the number of layers, their type, the number of hidden neurons, the activation function and the order of execution.\n",
+    "The model is defined in the MyModel class, which inherits from nn.Module.\n",
     "\n",
-    "As we can see, there's one input_layer with 10 neurons from input and 10 hidden neurons.\n",
+    "The input layer has 10 neurons, corresponding to the 10 features of the dataset. The hidden layer also contains 10 neurons.\n",
     "\n",
-    "But why 10 neurons from input, you can ask yourself. The answer is simple: since or dataset is made of 10 feature, the neural network need to have 10 input neurons, one for each feature. If we have less than 10, some features will not be 'seen' by our model. And if we have more than 10, we will create a model more complex than necessary, with unnecessary complexity."
+    "The input dimensionality must match the number of features; otherwise, the matrix multiplication in the linear layer would be undefined. Increasing input neurons beyond feature count would not increase representational power and would introduce unnecessary parameters."
    ]
   },
   {
@@ -651,13 +651,13 @@
    "id": "e1fcd13e",
    "metadata": {},
    "source": [
-    "And here is the summary of our model. 2 layers for training and 1 exit layer. The layers of training are two linear models (on the form y=ax+b) and the exit layer uses the sigmoid function to convert the final value to something between 0 and 1.\n",
+    "The model contains two linear layers followed by a sigmoid activation.\n",
     "\n",
-    "The first layer receives 10 inputs (for the 10 features of the dataset) and calculates 10 inner neurons (in a total of 100 operations), plus the 10 biases (one for each neuron), making a total of 110 parameters.\n",
+    "The first layer maps 10 input features to 10 hidden neurons, resulting in 100 weights plus 10 bias terms (110 parameters).\n",
     "\n",
-    "The second layer receives the 10 outputs from the first layer and create a single exit, with a probability that indicates the chance of the sample belong to the class 0 (and with a basic operation, the chance to belong to class 1).\n",
+    "The second layer maps 10 hidden activations to a single scalar output, resulting in 10 weights plus 1 bias (11 parameters).\n",
     "\n",
-    "The final step is the sigmoid function, that maps the value from the second class to something between 0 and 1."
+    "The sigmoid function converts the final logit into a probability between 0 and 1, representing the likelihood of belonging to the positive class."
    ]
   },
   {
@@ -698,9 +698,9 @@
    "id": "a3793ae9",
    "metadata": {},
    "source": [
-    "Here we have two functions: the BCELoss (or Binary Cross Entropy) is a loss function usually applied to binary classification (wich is our case here).\n",
+    "BCELoss (Binary Cross-Entropy) is used for binary classification tasks.\n",
     "\n",
-    "The Adam otimizer is the function we will use for the backpropagation phase, making some adjusts to the weights and biases to make the neural network more accurate in each step."
+    "The Adam optimizer updates model parameters using adaptive gradient-based optimization, improving convergence speed and stability."
    ]
   },
   {
@@ -719,11 +719,11 @@
    "id": "ce9bfed4",
    "metadata": {},
    "source": [
-    "And now, finally, we train our network!\n",
+    "An epoch corresponds to one complete pass over the training dataset.\n",
     "\n",
-    "The 'epochs' is the number of times that our model will be executed. 10 times means that the neural network (or NN) will take the dataset (one batch at time) and try to calculate it's result. After this, the errors will be used to recalculate the weights and biases and them the model will run again, one batch at time. This process will repeat 10 times (since the dataset is small, both in rows and in features), and the final result will be our final model.\n",
+    "During each epoch, the model processes all batches sequentially. After each batch, gradients are computed and parameters are updated.\n",
     "\n",
-    "At the end we can see the values of the accuracy and the loss function for each epoch. And as we can see, the values don't change much after 2 or 3 iterations. The loss function converges to 0 and the accuracy converges to 100, wich means that our model is getting better and better, but never perfect (wich is paradoxically great, for a perfect score in training data usualy means overfitting and a terrible score in test, or real world, data)."
+    "As training progresses, the loss decreases and accuracy increases. However, extremely high training accuracy may indicate overfitting if validation performance does not follow the same trend."
    ]
   },
   {
@@ -872,7 +872,9 @@
    "id": "3b64ff43",
    "metadata": {},
    "source": [
-    "Finally, we can see the plots that shows us the process of training: the first epoch shows a model with low accuracy (~91%) and high loss (~0.6). But with time, and training, the model get better and better, reaching a loss close to 0 and a accuracy close to 99%."
+    "The training curves show rapid convergence: accuracy increases from approximately 91% in the first epoch to nearly 99%, while loss decreases toward zero.\n",
+    "\n",
+    "This behavior indicates that the model quickly fits the dataset."
    ]
   },
   {
